--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_plum">#DB5A6B</color>
+    <color name="light_salmon">#ffa07a</color>
+    <color name="misty_rose">#ffe4e1</color>
+
 </resources>
