--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -13,9 +13,9 @@
         android:title="Compose"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_home"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home"
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="Search"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_profile"
